SUBDIRS = reference

EXTRA_DIST = \
	COPYING \
	HELP \
	README \
	TODO \
	VERSION \
	gtksheet-9.0.ChangeLog \
	gtkplot-5.0.ChangeLog \
	gtkiconlist-2.0.ChangeLog \
	tutorial/index.html \
	tutorial/gtksheet/gtksheet_howto.html \
	tutorial/gtksheet/pixmaps.h \
	tutorial/gtksheet/xpm.c \
	tutorial/gtksheet/pics/gtksheet_cell_text.jpg \
	tutorial/gtksheet/pics/gtksheet_new_sheet.jpg \
	tutorial/gtksheet/pics/gtksheet_pack_combo.jpg \
	tutorial/gtksheet/pics/gtksheet_pack_xpm.jpg \
	tutorial/gtksheet/pics/gtksheet_range_bg.jpg \
	reference/gtkextra-bordercombo.html \
	reference/gtkextra-charsel.html \
	reference/gtkextra-checkitem.html \
	reference/gtkextra-colorcombo.html \
	reference/gtkextra-combobox.html \
	reference/gtkextra-csurface.html \
	reference/gtkextra-dirtree.html \
	reference/gtkextra-filelist.html \
	reference/gtkextra-fontcombo.html \
	reference/gtkextra-general.html \
	reference/gtkextra-iconfileselection.html \
	reference/gtkextra-iconlist.html \
	reference/gtkextra-itementry.html \
	reference/gtkextra-plot3d.html \
	reference/gtkextra-plotbar.html \
	reference/gtkextra-plotbox.html \
	reference/gtkextra-plotcanvas.html \
	reference/gtkextra-plotdata.html \
	reference/gtkextra-plotdt.html \
	reference/gtkextra-plotflux.html \
	reference/gtkextra-plot.html \
	reference/gtkextra-plotpc.html \
	reference/gtkextra-plotpixmap.html \
	reference/gtkextra-plotpolar.html \
	reference/gtkextra-plotprint.html \
	reference/gtkextra-plotps.html \
	reference/gtkextra-plotstructures.html \
	reference/gtkextra-plotsurface.html \
	reference/gtkextra-psfont.html \
	reference/gtkextra-sheet.html \
	reference/gtkextra-sheetstructures.html \
	reference/gtkextra-togglecombo.html \
	reference/gtkextra-version.html \
	reference/index.html \
	reference/pics/gtk_border_combo.jpg \
	reference/pics/gtk_charsel.png \
	reference/pics/gtk_color_combo.jpg \
	reference/pics/gtk_conlist_workbench.jpg \
	reference/pics/gtk_filelist_filter.jpg \
	reference/pics/gtk_filelist_new.jpg \
	reference/pics/gtk_filelist_tree.jpg \
	reference/pics/gtk_iconlist_plot.jpg 

